Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24740

Map items added before a plugin is set disappear

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.0.0
    • 5.0.0
    • None
    • ubuntu, qtlocation sha 432b7dc55ec6cfba900f2a001c751b554fd61d09

    Description

      See attachment, also in the mapviewer example.

      Mapviewer should display 2 circles associated with "Nokia" (-27.5796,153.1003) and "Eight Mile plains" (-27.5758, 153.0881).
      The circles are absent even after panning and zooming.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            alewilso Alex Wilson (closed Nokia identity) (Inactive)
            shubina Natalia Shubina (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes