QGeoMap: handle map items added before a plugin is available

Delay calling setMap() on new items if the map plugin is not yet
available, then call this once it is.

Task-number: QTBUG-24740
Change-Id: Ic331b812915f6b2eb4ca4fd3e43078b7a1509501
Reviewed-by: Ian Chen <ian.1.chen@nokia.com>
Reviewed-by: Alex Wilson <alex.wilson@nokia.com>